feat(cortex): improve UI architecture, terminal behavior, and secure API config flow
- extract About dialog UI into dedicated AboutSectionView and wire MainController to use it
- add modal backdrop/blur handling for dialogs and improve popup styling behavior
- split Preferences vs Settings dialog modes and expand AI settings form
- persist AI Model settings into src/main/resources/app.properties on Save
- update API config resolution to:
  1) Cortex/app.properties
  2) ai-project/src/main/resources/app.properties
  3) classpath fallback
- improve missing API key guidance with explicit resource-file location
- prevent default AI settings from unintentionally overriding app.properties values
- improve chat message rendering:
  - responsive bubble widths
  - line-based markdown rendering for better selection/inline ask context
  - refined inline discussion thread insertion/collapse behavior
- improve terminal behavior:
  - add Cortex shell mode routing
  - support external cmd/powershell launch on Windows
  - refine shell command selection and handling
- improve command/runtime detection and remove noisy command echo from code execution
- rename/branding updates to Cortex in app title and project metadata
- add gitignore protections for local API config files:
  - /app.properties
  - /src/main/resources/app.properties
- add fallback resource app.properties template and keep settings-driven updates consistent